--- a/zero_shot_object_detection_with_grounding_dino.ipynb
+++ b/zero_shot_object_detection_with_grounding_dino.ipynb
@@ -603,7 +603,8 @@
         "import os\n",
         "import supervision as sv\n",
         "\n",
-        "IMAGE_NAME = \"dog-3.jpeg\"\n",
+        "# IMAGE_NAME = \"dog-3.jpeg\"\n",
+        "IMAGE_NAME = \"/data/ML_document/datasets/custom_6dpose_dataset/train/5.png\"\n",
         "IMAGE_PATH = os.path.join(HOME, \"data\", IMAGE_NAME)\n",
         "\n",
         "TEXT_PROMPT = \"chair with man sitting on it\"\n",
